# matchar-io

./: .env.development  .env.production  .gitignore  .justfile  Cargo.toml  README.md  db.just  docker-compose.yaml
backend/database/: Cargo.toml
backend/matchar_app_actor/: Cargo.toml
backend/matchar_app_actor/src/: command.rs  lib.rs  message.rs  pool.rs  postbox.rs
backend/matchar_app_actor/src/channel/command/: mod.rs
backend/matchar_app_actor/src/channel/command/enter/: handler.rs  message.rs
backend/matchar_app_actor/src/channel/domain/: mod.rs
backend/matchar_app_actor/src/channel/event/: mod.rs
backend/matchar_app_actor/src/channel/event/chat/: handler.rs  message.rs
backend/matchar_app_actor/src/channel/event/entered/: handler.rs  message.rs
backend/matchar_app_actor/src/channel/event/room/count_updated/: handler.rs  message.rs
backend/matchar_app_actor/src/game/: mod.rs
backend/matchar_app_actor/src/game/config/domain/: attribute.rs  max_round.rs  max_timeout.rs
backend/matchar_app_actor/src/game/word_chain/domain/: mod.rs
backend/matchar_app_actor/src/game/wordchain/: mod.rs
backend/matchar_app_actor/src/room/: enter_room.rs  leave_room.rs  mod.rs
backend/matchar_app_actor/src/room/command/: mod.rs
backend/matchar_app_actor/src/room/command/enter/: handler.rs  message.rs  mod.rs
backend/matchar_app_actor/src/room/domain/: mod.rs
backend/matchar_app_actor/src/room/event/entered/: handler.rs  message.rs
backend/matchar_app_actor/src/server/: create_room.rs  mod.rs
backend/matchar_app_actor/src/user/: mod.rs
backend/matchar_app_actor/src/user/domain/: mod.rs
backend/matchar_app_actor/src/user/event/: mod.rs
backend/matchar_app_actor/src/user/event/emit_event/: handler.rs  message.rs
backend/matchar_app_adapter/: Cargo.toml
backend/matchar_app_adapter/src/: lib.rs
backend/matchar_app_adapter/src/auth/google_authorize/: mod.rs  oauth.rs  session.rs
backend/matchar_app_adapter/src/auth/google_callback/: event.rs  mod.rs  pkce.rs  session.rs  user.rs
backend/matchar_app_adapter/src/me/information/: mod.rs  user.rs
backend/matchar_app_backend/: .env.development  .gitignore  .justfile  Cargo.toml  build.rs  env.just
backend/matchar_app_backend/src/: main.rs
backend/matchar_app_backend/src/app/: mod.rs
backend/matchar_app_backend/src/app/state/: database.rs  mod.rs  postbox.rs
backend/matchar_app_backend/src/controller/: mod.rs
backend/matchar_app_backend/src/controller/auth/: google_authorize.rs  google_callback.rs  mod.rs
backend/matchar_app_backend/src/controller/me/: find_one.rs  information.rs  mod.rs
backend/matchar_app_backend/src/controller/user/: find_one.rs  information.rs  mod.rs
backend/matchar_app_backend/src/controller/ws/: connect.rs  mod.rs
backend/matchar_app_backend/src/domain/: mod.rs  session_token.rs
backend/matchar_app_backend/src/domain/session/: mod.rs
backend/matchar_app_backend/src/domain/session_token/: generated.rs  mod.rs  received.rs
backend/matchar_app_backend/src/domain/user_session/: mod.rs
backend/matchar_app_service/: Cargo.toml
backend/matchar_app_service/src/: lib.rs
backend/matchar_app_service/src/auth/: mod.rs
backend/matchar_app_service/src/auth/google_authorize/: inbound.rs  mod.rs  outbound.rs  port.rs  repository.rs  service.rs
backend/matchar_app_service/src/auth/google_callback/: inbound.rs  mod.rs  port.rs  repository.rs  service.rs
backend/matchar_app_service/src/auth/use_case/google_callback/: outbound.rs
backend/matchar_app_service/src/channel/command/enter/: handler.rs  message.rs
backend/matchar_app_service/src/channel/domain/: entity.rs  mod.rs  postbox.rs
backend/matchar_app_service/src/channel/domain/postbox/: mod.rs
backend/matchar_app_service/src/channel/event/: mod.rs
backend/matchar_app_service/src/channel/event/chat/: handler.rs  message.rs
backend/matchar_app_service/src/channel/event/entered/: handler.rs  message.rs
backend/matchar_app_service/src/channel/event/room/: mod.rs
backend/matchar_app_service/src/channel/use_case/: chat_in_channel.rs  enter.rs  enter_channel.rs  mod.rs
backend/matchar_app_service/src/channel/use_case/chat/: mod.rs
backend/matchar_app_service/src/channel/use_case/enter/: mod.rs
backend/matchar_app_service/src/common/actor/: event.rs  mod.rs
backend/matchar_app_service/src/common/postbox/: command.rs  event.rs  mod.rs  pool.rs
backend/matchar_app_service/src/game/: mod.rs
backend/matchar_app_service/src/game/domain/: mod.rs  word_chain.rs
backend/matchar_app_service/src/game/domain/config/: attribute.rs  mod.rs
backend/matchar_app_service/src/me/: mod.rs
backend/matchar_app_service/src/me/information/: inbound.rs  mod.rs  port.rs  repository.rs  service.rs
backend/matchar_app_service/src/me/use_case/find_one/: service.rs
backend/matchar_app_service/src/player/domain/: postbox.rs
backend/matchar_app_service/src/room/: mod.rs
backend/matchar_app_service/src/room/command/enter/: handler.rs  message.rs  mod.rs
backend/matchar_app_service/src/room/domain/: entity.rs  postbox.rs
backend/matchar_app_service/src/room/event/: mod.rs
backend/matchar_app_service/src/room/event/entered/: handler.rs  message.rs
backend/matchar_app_service/src/room/use_case/: enter_room.rs  mod.rs
backend/matchar_app_service/src/room/use_case/enter/: mod.rs
backend/matchar_app_service/src/session/: mod.rs
backend/matchar_app_service/src/session/use_case/find_one/: inbound.rs  outbound.rs  service.rs
backend/matchar_app_service/src/user/domain/: entity.rs  postbox.rs
backend/matchar_app_service/src/user/find_one/: port.rs
backend/matchar_app_service/src/user/use_case/: chat.rs  mod.rs
backend/matchar_app_service/src/user/use_case/emit_event/: mod.rs
backend/matchar_app_service/src/user/use_case/find_one/: inbound.rs  outbound.rs  service.rs
backend/matchar_app_service/src/user/use_case/information/: service.rs
backend/refinement/: Cargo.toml  build.rs
backend/refinement/src/: datetime.rs  email_address.rs  id.rs  lib.rs  pool.rs  registry.rs  url.rs  user_name.rs
(+61 files in other folders)
