[package]
name = "matchar_app_actor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
postbox = { path = "../postbox" }
refinement = { path = "../refinement" }
router = { path = "../router" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tunnel = { path = "../tunnel" }
url = { workspace = true }
