[package]
name = "matchar_app_adapter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
database = { path = "../database" }
matchar_app_service = { path = "../matchar_app_service" }
oauth2 = { path = "../oauth2" }
refinement = { path = "../refinement" }
sqlx = { workspace = true }
time = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
