[package]
name = "matchar_app_backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
database = { path = "../database" }
jsonwebtoken = { workspace = true }
matchar_app_adapter = { path = "../matchar_app_adapter" }
matchar_app_service = { path = "../matchar_app_service" }
refinement = { path = "../refinement" }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
