[package]
name = "matchar_app_backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
database = { path = "../database" }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
matchar_app_actor = { path = "../matchar_app_actor" }
matchar_app_repository = { path = "../matchar_app_repository" }
matchar_app_service = { path = "../matchar_app_service" }
postbox = { path = "../postbox" }
refinement = { path = "../refinement" }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tunnel = { path = "../tunnel" }
url = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
