[package]
name = "refinement"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
email_address = "0.2.9"
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
